2019-06-03  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Use G_DECLARE_FINAL_TYPE to declare LibBalsaAddress

	Make the structure private, and provide and use the necessary
	getters and setters.

	* libbalsa/abook-completion.c (address_compare):
	* libbalsa/address-book-extern.c (lbe_load_cb),
	(libbalsa_address_book_externq_add_address):
	* libbalsa/address-book-gpe.c (gpe_read_attr), (create_name),
	(gpe_read_address):
	* libbalsa/address-book-ldap.c
	(libbalsa_address_book_ldap_get_address),
	(libbalsa_address_book_ldap_add_address),
	(libbalsa_address_book_ldap_remove_address),
	(libbalsa_address_book_ldap_modify_address):
	* libbalsa/address-book-ldif.c (build_name), (address_new_prefill),
	(lbab_ldif_write_dn), (lbab_ldif_write_addresses),
	(lbab_ldif_write_surname), (lbab_ldif_write_givenname),
	(lbab_ldif_write_nickname), (lbab_ldif_write_organization):
	* libbalsa/address-book-osmo.c (utf8_lba_strstr),
	(libbalsa_address_book_osmo_alias_complete), (osmo_read_addresses):
	* libbalsa/address-book-rubrica.c
	(libbalsa_address_book_rubrica_load),
	(libbalsa_address_book_rubrica_add_address),
	(libbalsa_address_book_rubrica_modify_address),
	(lbab_rubrica_load_xml), (lbab_insert_address_node),
	(extract_cards):
	* libbalsa/address-book-text.c (lbab_text_item_compare),
	(lbab_text_load_file), (libbalsa_address_book_text_load):
	* libbalsa/address-book-vcard.c (lbab_vcard_write_fn),
	(lbab_vcard_write_n), (lbab_vcard_write_nickname),
	(lbab_vcard_write_org), (lbab_vcard_write_addresses),
	(libbalsa_address_book_vcard_parse_address):
	* libbalsa/address-book.c:
	* libbalsa/address-book.h:
	* libbalsa/address.c (libbalsa_address_class_init),
	(libbalsa_address_init), (libbalsa_address_finalize),
	(libbalsa_address_new_from_vcard), (libbalsa_address_set_copy),
	(libbalsa_address_to_gchar), (lba_get_name_or_mailbox),
	(libbalsa_address_get_name_from_list),
	(libbalsa_address_get_mailbox_from_list),
	(libbalsa_address_n_mailboxes_in_list),